ifds/src/tests/icfg/snapshots/ifds__tests__icfg__sparse__test_ir_return_branches_dot.snap
---
source: src/tests/icfg/sparse.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (7) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (8) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (19) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (23) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (30) at (1, 2) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 5.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (6) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (11) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (13) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (17) at (4, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (18) at (4, 12) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (20) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (21) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (22) at (5, 10) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (24) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (25) at (5, 10) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (26) at (5, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (27) at (5, 12) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (28) at (5, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (29) at (5, 12) { };
\node[font=\tiny] (note_2) at (2.5, 0.5) {Const(1, 1.0)};
\node[font=\tiny] (note_3) at (2.5, 1.5) {Conditional(1, [1, 2])};
\node[font=\tiny] (note_4) at (2.5, 2.5) {Block(1)};
\node[font=\tiny] (note_5) at (2.5, 3.5) {Const(1, 2.0)};
\node[font=\tiny] (note_6) at (2.5, 4.5) {Const(2, 3.0)};
\node[font=\tiny] (note_7) at (2.5, 5.5) {Return([1])};
\node[font=\tiny] (note_8) at (2.5, 6.5) {Jump(3)};
\node[font=\tiny] (note_9) at (2.5, 7.5) {Block(2)};
\node[font=\tiny] (note_10) at (2.5, 8.5) {Const(2, 4.0)};
\node[font=\tiny] (note_11) at (2.5, 9.5) {Jump(3)};
\node[font=\tiny] (note_12) at (2.5, 10.5) {Block(3)};
\node[font=\tiny] (note_13) at (2.5, 11.5) {Return([0])};
\node[font=\tiny] (note_14) at (2.5, 0.5) {Const(1, 1.0)};
\node[font=\tiny] (note_15) at (2.5, 1.5) {Conditional(1, [1, 2])};
\node[font=\tiny] (note_16) at (2.5, 2.5) {Block(1)};
\node[font=\tiny] (note_17) at (2.5, 3.5) {Const(1, 2.0)};
\node[font=\tiny] (note_18) at (2.5, 4.5) {Const(2, 3.0)};
\node[font=\tiny] (note_19) at (2.5, 5.5) {Return([1])};
\node[font=\tiny] (note_20) at (2.5, 6.5) {Jump(3)};
\node[font=\tiny] (note_21) at (2.5, 7.5) {Block(2)};
\node[font=\tiny] (note_22) at (2.5, 8.5) {Const(2, 4.0)};
\node[font=\tiny] (note_23) at (2.5, 9.5) {Jump(3)};
\node[font=\tiny] (note_24) at (2.5, 10.5) {Block(3)};
\node[font=\tiny] (note_25) at (2.5, 11.5) {Return([0])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (1) [bend right] edge  node { } (15);
		\path[->, blue] (1) [bend right] edge  node { } (16);
		\path[->, blue] (1) [bend right] edge  node { } (17);
		\path[->, blue] (1) [bend right] edge  node { } (18);
		\path[->, blue] (2) [bend right] edge  node { } (4);
		\path[->, blue] (6) [loop right] edge  node { } (6);
		\path[->, blue] (1) [bend right] edge  node { } (21);
		\path[->, blue] (1) [bend right] edge  node { } (22);
		\path[->, blue] (2) [bend right] edge  node { } (8);
		\path[->, blue] (6) [bend right] edge  node { } (21);
		\path[->, blue] (6) [bend right] edge  node { } (22);
		\path[->, blue] (1) [bend right] edge  node { } (26);
		\path[->, blue] (1) [bend right] edge  node { } (27);
		\path[->, blue] (6) [bend right] edge  node { } (26);
		\path[->, blue] (6) [bend right] edge  node { } (27);
		\path[->, blue] (0) [bend right] edge  node { } (30);


                \end{tikzpicture}
            \end{document}
