ifds/src/tests/icfg/snapshots/ifds__tests__icfg__sparse__test_ir_return_dot.snap
---
source: src/tests/icfg/sparse.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (7) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (8) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (9) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (10) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (19) at (1, 3) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [1, 2])};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Const(1, 2.0)};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (1) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (13) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (5, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (17) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (18) at (5, 3) { };
\node[font=\tiny] (note_3) at (3.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_4) at (3.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_5) at (3.5, 2.5) {Return([0, 1])};
\node[font=\tiny] (note_6) at (3.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_7) at (3.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_8) at (3.5, 2.5) {Return([0, 1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (2) [loop right] edge  node { } (2);
		\path[->, blue] (3) [bend right] edge  node { } (15);
		\path[->, blue] (3) [bend right] edge  node { } (16);
		\path[->, blue] (2) [bend right] edge  node { } (15);
		\path[->, blue] (2) [bend right] edge  node { } (16);
		\path[->, blue] (0) [bend right] edge  node { } (19);


                \end{tikzpicture}
            \end{document}
